# Bachelor_arbeit_modul

./: .gitignore  Bachelor_arbeit_v4_repo.pptx  CHANGELOG.md  README.md  Test.ipynb  setup.cfg
src/Bachelor_arbeit_modul/: __init__.py
src/Bachelor_arbeit_modul/Blocker/: __init__.py  blocker.py
src/Bachelor_arbeit_modul/Data/Company/: company_test_14_12.parquet  company_train_14_12.parquet
src/Bachelor_arbeit_modul/Data/Company/model/: events.out.tfevents.1734208448.soheil_rst.17948.4  events.out.tfevents.1734208631.soheil_rst.17948.5
src/Bachelor_arbeit_modul/Data/Company/model/checkpoint-600/: rng_state.pth  trainer_state.json
src/Bachelor_arbeit_modul/Data/Street/: street_test_filtered.parquet  street_train_filtered.parquet
src/Bachelor_arbeit_modul/Data/Street/model/: events.out.tfevents.1734207764.soheil_rst.17948.0  events.out.tfevents.1734207892.soheil_rst.17948.1  events.out.tfevents.1734208084.soheil_rst.17948.2  events.out.tfevents.1734208214.soheil_rst.17948.3
src/Bachelor_arbeit_modul/Data/Street/model/checkpoint-200/: config.json  rng_state.pth  trainer_state.json
src/Bachelor_arbeit_modul/Feature_Extraction/: feature_extraction.py
src/Bachelor_arbeit_modul/Fine_Tuning/: __init__.py  fine_tuning3.py
src/Bachelor_arbeit_modul/Housenumber/: __init__.py  housenumber.py
src/Bachelor_arbeit_modul/Matcher/: Matcher.ipynb  __init__.py  match_vergleich.parquet  matched.parquet  matched_lower.parquet  matcher.py
