[option]
packages = find:
package_dir = 
    =src


install_requires = 
    pandas
    numpy
    math
    matplotlib
    torch
    sklearn
    transformers
    joblib
    sentence_transformers
    gc
    re
    networkx


[option.packages.find]
where=src


[metadata]
name = Bachelor_arbeit_modul
version = attr: Bachelor_arbeit_modul._version.__version__
author = Soheil Rastehkhak
author_email = Soheilrst69@gmail.com
url = ''